--- a/1/12/123/123oye.com.html
+++ b/1/12/123/123oye.com.html
@@ -1,34 +1,29 @@
-<!--The following is the downloaded HTML source of the 123oye.com privacy policy that was archived on 2015-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150506015049id_/http%3A//123oye.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 123oye.com privacy policy that was archived on 2017-04-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428095742id_/http%3A//www.123oye.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en-IN"><head>
+<meta name="google-site-verification" content="GEyiucflr2jmxhz__0IKgEkiHLqz1_BuVST2SkIspoc">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><script src="https://js-agent.newrelic.com/nr-632.min.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var o=n[t]={exports:{}};e[t][0].call(o.exports,function(n){var o=e[t][1][n];return r(o?o:n)},o,o.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<t.length;o++)r(t[o]);return r}({QJf3ax:[function(e,n){function t(e){function n(n,t,a){e&&e(n,t,a),a||(a={});for(var u=c(n),f=u.length,s=i(a,o,r),p=0;f>p;p++)u[p].apply(s,t);return s}function a(e,n){f[e]=c(e).concat(n)}function c(e){return f[e]||[]}function u(){return t(n)}var f={};return{on:a,emit:n,create:u,listeners:c,_events:f}}function r(){return{}}var o="nr@context",i=e("gos");n.exports=t()},{gos:"7eSDFh"}],ee:[function(e,n){n.exports=e("QJf3ax")},{}],3:[function(e,n){function t(e){return function(){r(e,[(new Date).getTime()].concat(i(arguments)))}}var r=e("handle"),o=e(1),i=e(2);"undefined"==typeof window.newrelic&&(newrelic=window.NREUM);var a=["setPageViewName","addPageAction","setCustomAttribute","finished","addToTrace","inlineHit","noticeError"];o(a,function(e,n){window.NREUM[n]=t("api-"+n)}),n.exports=window.NREUM},{1:12,2:13,handle:"D5DuLP"}],"7eSDFh":[function(e,n){function t(e,n,t){if(r.call(e,n))return e[n];var o=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:o,writable:!0,enumerable:!1}),o}catch(i){}return e[n]=o,o}var r=Object.prototype.hasOwnProperty;n.exports=t},{}],gos:[function(e,n){n.exports=e("7eSDFh")},{}],handle:[function(e,n){n.exports=e("D5DuLP")},{}],D5DuLP:[function(e,n){function t(e,n,t){return r.listeners(e).length?r.emit(e,n,t):(o[e]||(o[e]=[]),void o[e].push(n))}var r=e("ee").create(),o={};n.exports=t,t.ee=r,r.q=o},{ee:"QJf3ax"}],id:[function(e,n){n.exports=e("XL7HBI")},{}],XL7HBI:[function(e,n){function t(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:i(e,o,function(){return r++})}var r=1,o="nr@id",i=e("gos");n.exports=t},{gos:"7eSDFh"}],G9z0Bl:[function(e,n){function t(){var e=d.info=NREUM.info,n=f.getElementsByTagName("script")[0];if(e&&e.licenseKey&&e.applicationID&&n){c(p,function(n,t){n in e||(e[n]=t)});var t="https"===s.split(":")[0]||e.sslForHttp;d.proto=t?"https://":"http://",a("mark",["onload",i()]);var r=f.createElement("script");r.src=d.proto+e.agent,n.parentNode.insertBefore(r,n)}}function r(){"complete"===f.readyState&&o()}function o(){a("mark",["domContent",i()])}function i(){return(new Date).getTime()}var a=e("handle"),c=e(1),u=(e(2),window),f=u.document,s=(""+location).split("?")[0],p={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-632.min.js"},d=n.exports={offset:i(),origin:s,features:{}};f.addEventListener?(f.addEventListener("DOMContentLoaded",o,!1),u.addEventListener("load",t,!1)):(f.attachEvent("onreadystatechange",r),u.attachEvent("onload",t)),a("mark",["firstbyte",i()])},{1:12,2:3,handle:"D5DuLP"}],loader:[function(e,n){n.exports=e("G9z0Bl")},{}],12:[function(e,n){function t(e,n){var t=[],o="",i=0;for(o in e)r.call(e,o)&&(t[i]=n(o,e[o]),i+=1);return t}var r=Object.prototype.hasOwnProperty;n.exports=t},{}],13:[function(e,n){function t(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,o=t-n||0,i=Array(0>o?0:o);++r<o;)i[r]=e[n+r];return i}n.exports=t},{}]},{},["G9z0Bl"]);</script>
-        <title>Privacy Policy - 123oye.com</title>	
+        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+        	<title>Privacy Policy - 123oye.com</title>
+	<meta name="description" content="Read here our privacy policy to your personal or business information secure. We strive to provide you with a safe and secure online job search and post portal.">
 
-<meta name="Description" content="Locate Jobs in Delhi, Mumbai Jobs easily. Information and Tools helping in your Job Search for Jobs in India - Delhi, Mumbai, Bangalore, Kolkata.Website with Best Jobs and Career Links"> 
-<meta name="Keywords" content="jobs in delhi, noida, gurgaon, jobs in india, jobs delhi india, jobs in mumbai, jobs mumbai, jobs kolkata, jobs in chennai, bangalore jobs"> 
-<meta name="revisit-after" content="15 days"> 
-<meta name="robots" content="index, follow"> 
-<meta name="city" content="delhi, noida, gurgaon, ahmedabad, bangalore, bengaluru, chandigarh, chennai, coimbatore, hyderabad, kochi, cochin, kolkata, mumbai, nagpur, pune, trivandrum"> 
-<meta name="state" content="delhi, new delhi">
-<meta name="country" content="india">
         <!-- Bootstrap -->
-        <link href="http://123oye.com/bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="http://123oye.com/bootstrap/css/custom.css" rel="stylesheet">
+        <link href="http://www.123oye.com/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="http://www.123oye.com/bootstrap/css/custom.css" rel="stylesheet">
 
-        <link href="http://123oye.com/css/main.css" rel="stylesheet" type="text/css"> 
-        <link href="http://123oye.com/css/st.css" rel="stylesheet" type="text/css">
-        <link href="http://123oye.com/css/site_css.css" rel="stylesheet" type="text/css">
-        <script src="http://123oye.com/js/common.js" type="text/javascript"></script>
+        <link href="http://www.123oye.com/css/main.css" rel="stylesheet" type="text/css"> 
+        <link href="http://www.123oye.com/css/st.css" rel="stylesheet" type="text/css">
+        <link href="http://www.123oye.com/css/site_css.css" rel="stylesheet" type="text/css">
+        <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://www.123oye.com/js/common.js" type="text/javascript"></script>
 
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <script src="http://123oye.com/bootstrap/js/jquery1.11.2.min.js"></script>
-        <script src="http://123oye.com/bootstrap/js/bootstrap.min.js"></script>
+        <script src="http://www.123oye.com/bootstrap/js/jquery1.11.2.min.js"></script>
+        <script src="http://www.123oye.com/bootstrap/js/bootstrap.min.js"></script>
     </head>
 
         <body>
@@ -36,27 +31,28 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="text-align: right;">
-                                                    <p>
+                        <!--                            <p>
                                 Welcome, <strong>visitor!</strong>
-                                [<a href="http://123oye.com/jobs-career/register.php">Register</a>
+                                [<a href="http://www.123oye.com/jobs-career/register.php">Register</a>
                                 |
-                                <a href="http://123oye.com/classifieds/wp-login.php">Login</a>]
+                                <a href="http://www.123oye.com/classifieds/wp-login.php">Login</a>]
                                 <a target="_new" href="http://www.facebook.com/123oye/">
-                                    <img src="http://123oye.com/images/facebook.png" alt="" width="16">
+                                    <img src="http://www.123oye.com/images/facebook.png" alt="" width="16">
                                 </a>
                                 |
                                 <a target="_new" href="http://www.twitter.com/123oye">
-                                    <img src="http://123oye.com/images/twitter.gif" alt="" width="16">
+                                    <img src="http://www.123oye.com/images/twitter.gif" alt="" width="16">
                                 </a>
                                 |
-                                <a target="_new" href="http://123oye.com/rss">
-                                    <img src="http://123oye.com/images/rss.png" alt="" width="16">
+                                <a target="_new" href="http://www.123oye.com/rss">
+                                    <img src="http://www.123oye.com/images/rss.png" alt="" width="16">
                                 </a>						
                             </p>
-                                            </div>
+                        -->
+                    </div>
 
                     <div class="col-md-4 col-lg-4">
-                        <p><a href="http://123oye.com/"><img src="http://123oye.com/images/123oye.jpg" alt="" class="img-responsive"></a></p>
+                        <p><a href="http://www.123oye.com/"><img src="http://www.123oye.com/images/123oye.jpg" alt="oye123" class="img-responsive"></a></p>
                     </div>
                     <div class="col-md-8 col-lg-8"><div class="toHideBlock">
 <script type="text/javascript">
@@ -90,13 +86,15 @@ google_ad_client = "ca-pub-3091639805675908";
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <!--<li class="active"><a href="#">Home</a></li>-->
-                            <li><a href="http://123oye.com/">Home</a></li>
-                            <li><a href="http://123oye.com/jobs-career/search">Search Jobs</a></li>
-                            <li><a href="http://123oye.com/jobs-career/add_job">Post Jobs </a></li>
-                            <li><a href="http://123oye.com/classifieds">Classifieds </a></li>
-                            <li><a href="http://123oye.com/food-recipes">Food Recipes</a></li>
-                            <li><a href="http://123oye.com/press-releases">Press Releases</a></li>
-                            <li><a href="http://123oye.com/indian-rupee-font">Rupee Font</a></li>
+                            <li><a href="http://www.123oye.com/">Home</a></li>
+                            <li><a href="http://www.123oye.com/jobs-career/search">Search Jobs</a></li>
+                            <li><a href="http://www.123oye.com/jobs-career/add_job">Post Jobs </a></li>
+                            <li><a href="http://www.123oye.com/food-recipes">Food Recipes</a></li>
+                            <li><a href="http://www.123oye.com/press-releases">Press Releases</a></li>
+                            <li><a href="http://www.123oye.com/indian-rupee-font">Rupee Font</a></li>
+<li><a href="http://www.astrovidhi.com/daily-horoscope/" target="_blank">Daily Horoscope</a></li>
+<li><a href="http://www.astrovidhi.com/horoscope-2017/" target="_blank">Horoscope 2017</a></li>
+
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container -->
@@ -108,7 +106,7 @@ google_ad_client = "ca-pub-3091639805675908";
 	<div class="row">
 		<div class="col-md-12 col-lg-12">
 			<div class="pb">
-				<div style="font-size:20px; color:#9BC85C; border-bottom:1px dashed #ccc;">Privacy Policy</div>
+				<h1 style="font-size:20px; color:#9BC85C; border-bottom:1px dashed #ccc;">Privacy Policy</h1>
 				<p class="pt">Your Privacy is important to us. 123oye.com does not accept resumes and is a free information website but on some web pages it may ask you to fill up forms related to a product or service or publication or just information. Users should carefully read the content of that page before filling any form on 123oye.com</p>
 				<p class="pt"><strong>Privacy Notice:</strong><br>To better protect your privacy we provide this notice explaining our online information practices. To make this notice easy to find, we make it available on our home page. This notice applies to all information collected from or submitted to 123oye.com</p>
 				<p class="pt"><strong>Information we collect:</strong><br>123oye.com respects the privacy and security of its users. Our goal is to provide you with knowledge resources and services that are most relevant and helpful to you. We gather usage statistics such as pages viewed, browsers used etc. for analysis that helps us provide you improved user experience and services.</p>
@@ -167,7 +165,7 @@ google_ad_client = "ca-pub-3091639805675908";
 
 <script type="text/javascript">
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-24363202-5']);
+    _gaq.push(['_setAccount', 'UA-76808532-6']);
     _gaq.push(['_trackPageview']);
 
     (function () {
@@ -186,27 +184,25 @@ google_ad_client = "ca-pub-3091639805675908";
 		<div class="row">
 			<div class="col-md-3 col-lg-3">
 				<div style="color:#C14926; font-size:14px;" class="footerdiv"><b>Portals</b></div>
-				<div class="footerdiv"><a href="http://123oye.com/jobs-career/search">Search Jobs</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/classifieds">Classifieds</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/food-recipes">Food Recipes</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/press-releases">Press Releases</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/indian-rupee-font">Rupee Font</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/jobs-career/search">Search Jobs</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/food-recipes">Food Recipes</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/press-releases">Press Releases</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/indian-rupee-font">Rupee Font</a></div>
 			</div>
 			<div class="col-md-3 col-lg-3">
 				<div class="footerdiv" style="color:#C14926;font-size:14px;"><b>Submit</b></div>
-				<div class="footerdiv"><a href="http://123oye.com/classifieds/wp-login.php">Classifieds</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/jobs-career/add_job">Jobs</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/food-recipes/addrecipe">Food Recipe</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/press-releases/submitpressrelease.php">Press Releases</a></div>	
+				<div class="footerdiv"><a href="http://www.123oye.com/jobs-career/add_job">Jobs</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/food-recipes/addrecipe">Food Recipe</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/press-releases/submitpressrelease.php">Press Releases</a></div>	
 					
 			</div>
 			<div class="col-md-3 col-lg-3">
 				<div style="color:#C14926;font-size:14px;" class="footerdiv"><b>Who We Are</b></div>
-				<div class="footerdiv"><a href="http://123oye.com/about">About Us</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/contact">Contact Us</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/guidelines">Guidelines</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/privacy-policy">Privacy Policy</a></div>
-				<div class="footerdiv"><a href="http://123oye.com/terms-of-service">Terms of Service</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/about">About Us</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/contact">Contact Us</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/guidelines">Guidelines</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/privacy-policy">Privacy Policy</a></div>
+				<div class="footerdiv"><a href="http://www.123oye.com/terms-of-service">Terms of Service</a></div>
 			</div>
 			<div class="col-md-3 col-lg-3">
 				<iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F123oye&amp;width=244&amp;height=90&amp;show_faces=false&amp;colorscheme=light&amp;stream=false&amp;border_color&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:244px; height:90px;" allowtransparency="true"></iframe>
@@ -221,13 +217,10 @@ google_ad_client = "ca-pub-3091639805675908";
 			<div class="col-md-12 col-lg-12">
 				<strong>Our Partners: </strong>
 				<a href="http://jooble.co.in" target="_blank">Search jobs in India</a> | 
-				<a href="http://headline7.com" target="_blank">News from India</a> | 
-				<a href="http://cybercrimecomplaints.com" target="_blank">Cyber Crime Complaints</a> | 
-				<a href="http://gadmo.com" target="_blank">Technology Blog</a> | 
-				<a href="http://fashable.org" target="_blank">Fashable Blog</a>
+				
 			</div>
 		</div>
 	</div>
-	<div style="font-size:11px;" class="footerdiv">©  2002-2015 123oye.com All Rights Reserved.</div>
-</div><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","licenseKey":"91b65fc49f","applicationID":"5124317","transactionName":"bl0EYkNXDUQDUUVcDlcXM0RYGRNFC0RQVhgXSA5G","queueTime":0,"applicationTime":2,"atts":"QhoHFAtNHko=","errorBeacon":"bam.nr-data.net","agent":"js-agent.newrelic.com\/nr-632.min.js"}</script>
+	<div style="font-size:11px;" class="footerdiv">©  2002-2017 123oye.com All Rights Reserved.</div>
+</div>
 </body></html>
