--- a/t/tr/tra/trafficbot.uk.html
+++ b/t/tr/tra/trafficbot.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the trafficbot.uk privacy policy that was archived on 2015-04-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150418062211id_/http%3A//www.trafficbot.uk/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trafficbot.uk privacy policy that was archived on 2017-04-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428150720id_/http%3A//www.trafficbot.uk/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
@@ -38,16 +38,17 @@
 <![endif]-->
 
 
-		<script async="" src="//www.google-analytics.com/analytics.js"></script><script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        <script async="" src="https://embed.tawk.to/582dc1cd651e34097a931080/default" charset="UTF-8" crossorigin="*"></script><script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+          ga('create', 'UA-90648400-1', 'auto');
+          ga('send', 'pageview');
+        
+        </script>
 
-		  ga('create', 'UA-2473517-42', 'auto');
-		  ga('send', 'pageview');
-
-		</script>
 
 </head>
 
@@ -215,7 +216,7 @@
 	</div>
 	
 	<div class="copyright">
-		 ©2014 Skynet Venture, 6A Hampstead High Street, NW3 2PR, London, UK. All rights reserved.
+		 ©2014 - 2017 TrafficBot.uk. All rights reserved.
 	</div>
 	
 	<ul class="social-icons">
@@ -262,6 +263,18 @@ jQuery(window).load(function() {
 <script src="js/jquery (1).js"></script>
 <script src="js/jquery.ajaxchimp.js"></script>
 <script src="js/custom.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/582dc1cd651e34097a931080/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </body></html>
