--- a/s/sf/sfp/sfplustransceiver.com.html
+++ b/s/sf/sfp/sfplustransceiver.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sfplustransceiver.com privacy policy that was archived on 2016-04-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160415140420id_/http%3A//www.sfplustransceiver.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sfplustransceiver.com privacy policy that was archived on 2017-04-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428155110id_/http%3A//www.sfplustransceiver.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xml:lang="en"><head>
 <title>Privacy Policy</title>
@@ -624,7 +624,7 @@ $(document).ready(function () {
 <a href="http://www.sfplustransceiver.com/">SFP</a> , 
 <a href="http://www.sfplustransceiver.com/">SFP+</a> ,
 <a href="http://www.sfplustransceiver.com/">SFP Plus</a>,
-<a href="http://www.sfplus.net/" target="_blank">SFP+</a>,
+<a href="http://www.cablexa.com/10g-sfp+module" target="_blank">10G SFP+</a>,
 <a href="http://www.sfplustransceiver.com/xfp-transceivers" target="_blank">XFP</a>,
 <a href="http://www.sfplustransceiver.com/xenpak-transceivers" target="_blank">XENPAK</a>,
 <a href="http://www.prosfp.com/" target="_blank">SFP</a>,
@@ -635,7 +635,7 @@ $(document).ready(function () {
 
 </div>
 <div class="div1"><img alt="SFP Plus" src="catalog/view/theme/default/image/payment_image.gif"><img alt="SFP Plus" src="catalog/view/theme/default/image/shippingment_image.gif"></div>
-<div class="div2">Logos and trademarks remain the property of the corresponding company. <br>© 2016. <b>SFPlus Transceiver</b>. All Rights Reserved. 
+<div class="div2">Logos and trademarks remain the property of the corresponding company. <br>© 2017. <b>SFPlus Transceiver</b>. All Rights Reserved. 
 </div>
 <br>
 </div>
