--- a/d/de/del/deltaco.com.html
+++ b/d/de/del/deltaco.com.html
@@ -1,9 +1,12 @@
-<!--The following is the downloaded HTML source of the deltaco.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221203045id_/http%3A//deltaco.com/legal) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the deltaco.com privacy policy that was archived on 2017-04-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170428183151id_/https%3A//deltaco.com/legal) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" style="" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
+        <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-KTT6ZRZ"></script><script>
+            dataLayer = [];
+        </script>
         <!-- Google Tag Manager -->
-        <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-KTT6ZRZ"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
@@ -54,20 +57,8 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
-		<!--Facebook Code-->
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
-		<!--Facebook Code-->
-
 		<!--HEADER-->
-		        <header role="banner">
+		        <header role="banner" id="global-header">
             <div class="wrapper clearfix">
                 <a href="#main-content" class="offscreen accent-button">Skip to Content</a>
                 <a href="#" class="menu-button" id="menu-button" aria-expanded="false" aria-haspopup="true" aria-controls="main-nav">
@@ -78,7 +69,6 @@
                 </a>
                 <nav role="navigation" id="main-nav" class="drop-menu">
                     <ul>
-                        <li><a href="http://www.deltacogiftcards.com" tabindex="0" class="giftcard" target="_blank">Gift Cards</a></li>
                         <li><a href="food" tabindex="0">Menu</a></li>
                         <li><a href="contactus" tabindex="0">Contact Us</a></li>
                         <li><a href="specials" tabindex="0">Specials</a></li>
@@ -114,9 +104,7 @@
                         <!-- <li><a href="our-story">Our Story</a></li> -->
                     </ul>
                 </nav>
-                <h1> <a href="http://www.deltacogiftcards.com" target="_blank"><img src="images/diftcards_2016.png" alt="Gift Cards" class="giftcard sm-hidden"> </a>
-                 <a href="home"><img src="images/main-logo.svg" alt="Del Taco - Home"></a>   
-             </h1>                    
+                <h1><a href="home"><img src="images/main-logo.svg" alt="Del Taco - Home"></a></h1>                                         
                 <div class="icon-wrapper">
                     <a href="food" class="cutlery"><span class="visually-hidden">Link to Food Page</span></a>
                     <a href="locations" class="location"><span class="visually-hidden">Link to Locations Page</span></a>
@@ -332,7 +320,6 @@
                     <li class="social-icons col-xs-4 col-md-2"><a href="https://www.youtube.com/user/deltaco" target="_blank" title="Youtube"><img src="images/youtube-footer.svg" alt="Del Taco on YouTube!"></a></li>
                     <li class="social-icons col-xs-4 col-md-2"><a href="https://instagram.com/deltaco/" target="_blank" title="Instagram"><img src="images/insta-footer.svg" alt="Del Taco on Instagram!"></a></li>
                     <li class="social-icons col-xs-4 col-md-2"><a href="https://www.pinterest.com/deltaco" target="_blank" title="Pinterest"><img src="images/pinterest-footer.svg" alt="Del Taco on Pinterest!"></a></li>
-                    <li class="social-icons col-xs-4 col-md-2"><a href="https://vine.co/DelTaco" target="_blank" title="Vine"><img src="images/vine-footer.svg" alt="Del Taco on Vine!"></a></li>
                 </ul>
 
                 <ul id="footer-nav" role="navigation" class="col-xs-12 col-sm-8 col-sm-pull-3">
@@ -358,19 +345,10 @@
         </footer>  
 
         <script src="js/plugins.js"></script>
+        <script src="js/geo-invite.js"></script>
         <!-- <script src="js/main.js"></script>-->
 
 		<!--END-->
 
 	
-
-		<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-		</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-		<script type="text/javascript">
-		try {
-		var pageTracker = _gat._getTracker("UA-750978-2");
-		pageTracker._trackPageview();
-		} catch(err) {}</script>
-		</body></html>
+</body></html>
