--- a/o/oj/ojo/ojooo.com.html
+++ b/o/oj/ojo/ojooo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ojooo.com privacy policy that was archived on 2016-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161203025536id_/https%3A//ojooo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ojooo.com privacy policy that was archived on 2017-04-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170429054146id_/https%3A//ojooo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD//xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8">
@@ -7,14 +7,15 @@
 	<meta name="author" content="RM">
 	<meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Ojooo.com My Account</title>
+	<title>Ojooo.com - Privacy</title>
 	<link rel="stylesheet" type="text/css" href="https://ojooo.com/ojooo/site.css">
-	<link rel="stylesheet" type="text/css" href="https://ojooo.com/accpanel/css/site.css">
+	<link rel="stylesheet" type="text/css" href="https://ojooo.com/ojooo/css/acc.css?1">
 	<link rel="stylesheet" type="text/css" href="https://ojooo.com/ojooo/ojo_bar_1.css?2">
     <link rel="stylesheet" type="text/css" href="https://ojooo.com/ojooo/forms.css?7">
-    <link rel="stylesheet" type="text/css" href="/ojooo/upgrade.css">
+	
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" type="text/css">
 
-    <script type="text/javascript" src="https://ojooo.com/ojooo/js/jquery.js"></script>
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://ojooo.com/ojooo/js/jquery.js"></script>
 	<script type="text/javascript" src="https://ojooo.com/ojooo/js/ojo_bar.js?2"></script>
 	<script type="text/javascript" src="https://ojooo.com/ojooo/js/advajax.js"></script>
 	<script type="text/javascript" src="https://ojooo.com/ojooo/js/scripts.js"></script>
@@ -171,41 +172,63 @@ Last modified date: 5th May 2016.</div>
 
 </div> <!--//RM ojo_forfooter_middle-->
 
-
-<script type="text/javascript">
-//RM function for christmas etc.
-function ojo_holiday()
-{
-    var lang='';
-    if (lang=='ru')
-    {
-        var ojologo=document.getElementById('toplogo1');
-        ojologo.src="https://ojooo.com/img/packages/logo_very_small_ru.png";
-    }
-}
-ojo_holiday();
-</script>
-
-<script type="text/javascript" src="https://ojooo.com/ojooo/js/ojo_footer.js?4"></script>
-<script type="text/javascript">
-show_ojo_footer("com", "");
-</script>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-15210957-1");
-pageTracker._setDomainName("none");
-pageTracker._setAllowLinker(true);
-pageTracker._trackPageview();
-} catch(err) {}</script>
-<!-- A-xa //-->
-<script type="text/javascript" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script type="text/javascript">_atrk_opts = { atrk_acct: "Ve9We1a0mN00Uz", domain:"ojooo.com"}; atrk ();</script><noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=Ve9We1a0mN00Uz" style="display:none" height="1" width="1" alt="" /></noscript>
-<!-- A-xa end //-->
-
+<div id="footer">
+    	<div class="footer-content">
+            <div class="footer-wrap">
+                <div class="title">
+                    Help
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://ojooo.com/index.php?o=show/s/8">FAQ</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-wrap">
+                <div class="title">
+                    Our Company
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://ojooo.com/index.php?o=show/s/10">Address</a></li>
+                        <li><a href="https://ojooo.com/contact.php">Contact us</a></li>
+                    </ul>
+                </div>
+            </div>
+			<div class="footer-wrap">
+                <div class="title">&nbsp;             
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://ojooo.com/privacy">Privacy</a></li>
+                        <li><a href="https://ojooo.com/eula">EULA</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-wrap">
+                <div class="title">
+                    Follow us at:
+                </div>
+                <div>
+                    <ul>
+                        <li class="social_icons"><a class="facebook" href="https://www.facebook.com/OjoooMail" target="_blank"></a></li>
+                        <li class="social_icons"><a class="twitter" href="https://twitter.com/OjoooApp" target="_blank"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+</div>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-15210957-1', 'auto');
+            ga('send', 'pageview');
+            </script>
+  <!-- Start A-xa -->
+  <script type="text/javascript" src="https://d31qbv1cthcecs.cloudfront.net/atrk.js"></script><script type="text/javascript">_atrk_opts = { atrk_acct: "Ve9We1a0mN00Uz", domain:"ojooo.com"}; atrk ();</script><noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=Ve9We1a0mN00Uz" style="display:none" height="1" width="1" alt="" /></noscript>
+  <!-- End A-xa -->  
 <iframe src="ping.php" style="display:none; width:0; height:0; margin:0; padding:0;"></iframe>
 
 </body></html>
